[package]
name = "rustyreader"
version = "0.1.0"
authors = ["sebsch <sebsch@geblubber.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"


[lib]
name = "rustyreader_lib"
path = "src/lib.rs"

[[bin]]
name = "rustyreader_bin"
path = "src/main.rs"